api-k8s/api-comments-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-comments-ingress
  namespace: api-comments
  annotations:
    nginx.ingress.kubernetes.io/retry-targets: /
spec:
  ingressClassName: nginx
  rules:
  - host: comments.devops-challenge.globo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-comments-service
            port:
              number: 8000
